--- a/css/responsive.css
+++ b/css/responsive.css
@@ -145,13 +145,27 @@
 
 @media (max-width: 450px) {
     .interior-image {
-        max-width: 250px;
+        max-width: 220px;
         width: 100%;
     }
     .interior-image-container {
         justify-content: center;
         align-items: center;
         display: flex;
+    }
+}
+
+@media(max-width:330px) {
+    .second-p {
+        display: none;
+    }
+    .interior-image {
+        max-width: 200px;
+        width: 100%;
+    }
+    .interior-image-container {
+        max-width: 200px;
+        width: 100%;
     }
 }
 
@@ -262,14 +276,52 @@
 }
 
 @media (max-width: 450px) {
-    /* .raw3 {
-        display: none;
-    } */
     .left-container {
         display: flex;
         align-items: space-between;
     }
     .footer-ul {
         display: flex !important;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    .ul-li {
+        margin-right: 5px;
+    }
+    .ul-li a {
+        font-size: 10px;
+    }
+    .links1,
+    .links2,
+    .links3 a {
+        font-size: 10px;
+        margin-left: 0px !important;
+    }
+    h4 {
+        font-size: 12px;
+    }
+    .right-container {
+        flex-direction: column;
+    }
+    .footer-h3 {
+        font-size: 20px;
+    }
+    .paragraph {
+        font-size: 10px;
+    }
+    .links1::before {
+        content: "";
+        display: none;
+    }
+    .links2::before {
+        content: "";
+        display: none;
+    }
+    .links3::before {
+        content: "";
+        display: none;
+    }
+    .raw3 {
+        display: none;
     }
 }
