--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@
     /* menu slider */
     
     .menu {
-        background-image: url(../images/annie-spratt-0ZPSX_mQ3xI-unsplash.jpg);
+        background-image: url(../images/annie-spratt-0ZPSX_mQ3xI-unsplash.jpg) !important;
         background-size: cover;
         background-position: bottom;
         height: auto;
