--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,320 +1,414 @@
-    /* start navbar responsive */
-    
-    @media (max-width:760px) {
-        .navbar-links {
-            display: none;
-        }
-        .burger-button,
-        .fa-bars {
-            display: block;
-        }
-        .my-navbar {
-            flex-direction: column;
-        }
-        .nav-ul {
-            flex-direction: column;
-            align-items: flex-end;
-            text-align: inherit;
-            margin-bottom: 15px;
-        }
-        .my-nav-li {
-            text-align: center;
-        }
-        .navbar-links.active {
-            display: block;
-        }
-        .nav-a {
-            display: none;
-        }
-        .logo-container {
-            display: flex;
-            justify-content: flex-start !important;
-        }
-        .nav-logo {
-            width: 40px;
-            margin-top: 15px;
-        }
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
+
+/* start navbar responsive */
+
+@media (max-width:760px) {
+    .navbar-links {
+        display: none;
     }
-    
-    @media (max-width:960px) {
-        .nav-a {
-            display: none;
-        }
-        body {
-            overflow-x: hidden;
-        }
-        .my-nav-a {
-            font-size: 15px;
-        }
+    .burger-button,
+    .fa-bars {
+        display: block;
     }
-    /* end navbar */
-    /* slider responsive */
-    
-    @media (max-width:1124px) {
-        .slider-image {
-            height: 450px !important;
-        }
+    .my-navbar {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
     }
-    
-    @media (max-width:950px) {
-        .slider-image {
-            height: 400px !important;
-        }
+    .nav-ul {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-align: end;
+        -ms-flex-align: end;
+        align-items: flex-end;
+        text-align: inherit;
+        margin-bottom: 15px;
     }
-    
-    @media (max-width:750px) {
-        .slider-image {
-            height: 350px !important;
-        }
+    .my-nav-li {
+        text-align: center;
     }
-    /* end slider responsive */
-    /* start about us responsive */
-    
-    @media (max-width:1254px) {
-        .text-container p {
-            font-size: 16px;
-        }
-        .text-container {
-            margin-top: 45px;
-        }
-        .menu-span {
-            font-size: 23px;
-            text-align: center;
-        }
+    .navbar-links.active {
+        display: block;
     }
-    
-    @media (max-width:1154px) {
-        .text-container {
-            margin-top: 95px;
-        }
+    .nav-a {
+        display: none;
     }
-    
-    @media (max-width:1007px) {
-        .text-container {
-            margin-top: 0px;
-            width: 100%;
-            max-width: 555px;
-        }
-        .about-us-container {
-            justify-content: space-between;
-        }
-        .about-us-wraper {
-            background-image: none;
-            background-color: beige;
-            height: auto;
-        }
-        .interior-image-container {
-            margin-top: 0px;
-            display: block;
-            width: 375px;
-            margin-top: 19px;
-            margin-left: 19px;
-        }
-        .interior-image {
-            max-width: 375px;
-            width: 100%;
-        }
+    .logo-container {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: start !important;
+        -ms-flex-pack: start !important;
+        justify-content: flex-start !important;
     }
-    
-    @media (max-width: 900px) {
-        .text-container p {
-            font-size: 14px;
-        }
-        .about-us-container {
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        .about-us-title {
-            font-size: 35px;
-        }
+    .nav-logo {
+        width: 40px;
+        margin-top: 15px;
     }
-    
-    @media (max-width: 450px) {
-        .interior-image {
-            max-width: 220px;
-            width: 100%;
-        }
-        .interior-image-container {
-            justify-content: center;
-            align-items: center;
-            display: flex;
-        }
+}
+
+@media (max-width:960px) {
+    .nav-a {
+        display: none;
     }
-    
-    @media(max-width:330px) {
-        .second-p {
-            display: none;
-        }
-        .interior-image {
-            max-width: 200px;
-            width: 100%;
-        }
-        .interior-image-container {
-            max-width: 200px;
-            width: 100%;
-        }
+    body {
+        overflow-x: hidden;
     }
-    /* menu responsive */
-    
-    @media (max-width: 1270px) {
-        .content-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        .text {
-            max-width: 610px !important;
-            width: 100%;
-            margin-bottom: 15px;
-        }
-        .left-block {
-            max-width: 610px !important;
-            justify-content: center;
-            width: 100%;
-        }
-        h3 {
-            text-align: center;
-            padding-top: 10px;
-        }
+    .my-nav-a {
+        font-size: 15px;
     }
-    
-    @media (max-width: 918px) {
-        .my-right {
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            display: flex;
-        }
+}
+
+
+/* end navbar */
+
+
+/* slider responsive */
+
+@media (max-width:1124px) {
+    .slider-image {
+        height: 450px !important;
     }
-    /* end menu responsive */
-    /* start  contact container responsive */
-    
-    @media (max-width: 720px) {
-        .content-container {
-            width: 240px;
-        }
-        .icon {
-            width: 30px;
-            height: 30px;
-        }
-        h5 {
-            font-size: 14px;
-        }
-        .par {
-            font-size: 10px;
-        }
+}
+
+@media (max-width:950px) {
+    .slider-image {
+        height: 400px !important;
     }
-    
-    @media (max-width: 348px) {
-        .icon-container {
-            flex-direction: column;
-        }
+}
+
+@media (max-width:750px) {
+    .slider-image {
+        height: 350px !important;
     }
-    /* end contact container responsive */
-    /* start footer container */
-    
-    @media (max-width: 858px) {
-        .footer-3 {
-            font-size: 20px;
-        }
-        h4 {
-            font-size: 16px;
-        }
-        .paragraph {
-            font-size: 15px;
-        }
-        .footer-container {
-            padding: 75px 5px;
-        }
-        .links1 a,
-        .links2 a,
-        .links3 a {
-            font-size: 15px;
-        }
+}
+
+
+/* end slider responsive */
+
+
+/* start about us responsive */
+
+@media (max-width:1254px) {
+    .text-container p {
+        font-size: 16px;
     }
-    
-    @media (max-width: 634px) {
-        .footer-3 {
-            font-size: 17px;
-        }
-        h4 {
-            font-size: 13px;
-        }
-        .paragraph {
-            font-size: 12px;
-        }
-        .links1 a,
-        .links2 a,
-        .links3 a {
-            font-size: 13px;
-        }
-        .footer-container {
-            flex-direction: column;
-        }
-        .left-container {
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 30px;
-            width: 100%;
-        }
-        .right-container {
-            width: 100%;
-        }
+    .text-container {
+        margin-top: 45px;
     }
-    
-    @media (max-width: 450px) {
-        .left-container {
-            display: flex;
-            justify-content: space-between;
-        }
-        .footer-ul {
-            display: flex !important;
-            margin-top: 5px;
-            margin-bottom: 5px;
-        }
-        .ul-li {
-            margin-right: 5px;
-        }
-        .ul-li a {
-            font-size: 10px;
-        }
-        .links1,
-        .links2,
-        .links3 a {
-            font-size: 10px;
-            margin-left: 0px !important;
-        }
-        h4 {
-            font-size: 12px;
-        }
-        .right-container {
-            flex-direction: column;
-        }
-        .footer-h3 {
-            font-size: 20px;
-        }
-        .paragraph {
-            font-size: 10px;
-        }
-        .links1::before {
-            content: "";
-            display: none;
-        }
-        .links2::before {
-            content: "";
-            display: none;
-        }
-        .links3::before {
-            content: "";
-            display: none;
-        }
-        .raw3 {
-            display: none !important;
-        }
-        .footer-container {
-            padding: 5px;
-        }
+    .menu-span {
+        font-size: 23px;
+        text-align: center;
     }
-    /* end footer responsive */
+}
+
+@media (max-width:1154px) {
+    .text-container {
+        margin-top: 95px;
+    }
+}
+
+@media (max-width:1007px) {
+    .text-container {
+        margin-top: 0px;
+        width: 100%;
+        max-width: 555px;
+    }
+    .about-us-container {
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+    }
+    .about-us-wraper {
+        background-image: none;
+        background-color: beige;
+        height: auto;
+    }
+    .interior-image-container {
+        margin-top: 0px;
+        display: block;
+        width: 375px;
+        margin-top: 19px;
+        margin-left: 19px;
+    }
+    .interior-image {
+        max-width: 375px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 900px) {
+    .text-container p {
+        font-size: 14px;
+    }
+    .about-us-container {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+    .about-us-title {
+        font-size: 35px;
+    }
+}
+
+@media (max-width: 450px) {
+    .interior-image {
+        max-width: 220px;
+        width: 100%;
+    }
+    .interior-image-container {
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+    }
+}
+
+@media(max-width:330px) {
+    .second-p {
+        display: none;
+    }
+    .interior-image {
+        max-width: 200px;
+        width: 100%;
+    }
+    .interior-image-container {
+        max-width: 200px;
+        width: 100%;
+    }
+}
+
+
+/* menu responsive */
+
+@media (max-width: 1270px) {
+    .content-container {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+    .text {
+        max-width: 610px !important;
+        width: 100%;
+        margin-bottom: 15px;
+    }
+    .left-block {
+        max-width: 610px !important;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        width: 100%;
+    }
+    h3 {
+        text-align: center;
+        padding-top: 10px;
+    }
+}
+
+@media (max-width: 918px) {
+    .my-right {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+    }
+}
+
+
+/* end menu responsive */
+
+
+/* start  contact container responsive */
+
+@media (max-width: 720px) {
+    .content-container {
+        width: 240px;
+    }
+    .icon {
+        width: 30px;
+        height: 30px;
+    }
+    h5 {
+        font-size: 14px;
+    }
+    .par {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 348px) {
+    .icon-container {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+}
+
+
+/* end contact container responsive */
+
+
+/* start footer container */
+
+@media (max-width: 858px) {
+    .footer-3 {
+        font-size: 20px;
+    }
+    h4 {
+        font-size: 16px;
+    }
+    .paragraph {
+        font-size: 15px;
+    }
+    .footer-container {
+        padding: 75px 5px;
+    }
+    .links1 a,
+    .links2 a,
+    .links3 a {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 634px) {
+    .footer-3 {
+        font-size: 17px;
+    }
+    h4 {
+        font-size: 13px;
+    }
+    .paragraph {
+        font-size: 12px;
+    }
+    .links1 a,
+    .links2 a,
+    .links3 a {
+        font-size: 13px;
+    }
+    .footer-container {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+    .left-container {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        margin-bottom: 30px;
+        width: 100%;
+    }
+    .right-container {
+        width: 100%;
+    }
+}
+
+@media (max-width: 450px) {
+    .left-container {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+    }
+    .footer-ul {
+        display: -webkit-box !important;
+        display: -ms-flexbox !important;
+        display: flex !important;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    .ul-li {
+        margin-right: 5px;
+    }
+    .ul-li a {
+        font-size: 10px;
+    }
+    .links1,
+    .links2,
+    .links3 a {
+        font-size: 10px;
+        margin-left: 0px !important;
+    }
+    h4 {
+        font-size: 12px;
+    }
+    .right-container {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+    .footer-h3 {
+        font-size: 20px;
+    }
+    .paragraph {
+        font-size: 10px;
+    }
+    .links1::before {
+        content: "";
+        display: none;
+    }
+    .links2::before {
+        content: "";
+        display: none;
+    }
+    .links3::before {
+        content: "";
+        display: none;
+    }
+    .raw3 {
+        display: none !important;
+    }
+    .footer-container {
+        padding: 5px;
+    }
+}
+
+
+/* end footer responsive */
