--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,13 @@ body {
 }
 
 
+/* slider */
+
+.work .text h2 {
+    text-align: center;
+}
+
+
 /* start header */
 
 .my-navbar {
@@ -282,7 +289,7 @@ body {
     max-width: 260px;
 }
 
-.text {
+.text-menu {
     max-width: 240px;
     color: #8d8d8d;
     font-size: 16px;
@@ -798,3 +805,60 @@ h4 {
 
 
 /* form */
+
+
+/* personal section start */
+
+.personal_section {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.section-staff {
+    background: beige;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+#sheff {
+    display: grid;
+}
+
+#cook {
+    display: grid;
+}
+
+#img-sheff,
+#img-cook {
+    height: 200px;
+}
+
+.person_info {
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Roboto';
+}
+
+#cook_full_name,
+#sheff_full_name {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#cook_mail,
+#sheff_mail {
+    color: #212529;
+}
+
+.our-team {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Roboto';
+    font-size: 25px;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+
+
+/* personal section end */
