--- a/css/responsive.css
+++ b/css/responsive.css
@@ -90,6 +90,9 @@
     .slider-image {
         height: 350px !important;
     }
+    .work .text h2 {
+        font-size: 25px;
+    }
 }
 
 @media (max-width:550px) {
@@ -170,7 +173,7 @@
         align-items: center;
     }
     .about-us-title {
-        font-size: 35px;
+        font-size: 25px;
     }
 }
 
@@ -301,14 +304,8 @@
     .par {
         font-size: 10px;
     }
-}
-
-@media (max-width: 348px) {
-    .icon-container {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
+    .our-team {
+        font-size: 15px;
     }
 }
 
@@ -324,6 +321,13 @@
 @media (max-width:550px) {
     .map-for-responsive {
         height: 250px !important;
+    }
+}
+
+@media (max-width:750px) {
+    label,
+    input {
+        font-size: 15px;
     }
 }
 
@@ -390,6 +394,10 @@
     .right-container {
         width: 100%;
     }
+    .social-icon {
+        width: 25px;
+        height: 25px;
+    }
 }
 
 @media (max-width: 450px) {
@@ -444,8 +452,15 @@
         content: "";
         display: none;
     }
+    .links1 a,
+    .links2 a,
+    .links3 a {
+        margin-left: initial;
+        font-size: 10px;
+        line-height: 18px;
+    }
     .raw3 {
-        display: none !important;
+        flex-direction: column;
     }
     .footer-container {
         padding: 5px;
